# pattern-merger

./: .gitignore  LICENSE  README.md  pyproject.toml
pattern_merger/: __init__.py
