[tool.poetry]
name = "pattern-merger"
version = "0.1.0"
description = ""
authors = ["Jens Kadenbach <gitdax@daxbau.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.24.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
